# SOFAR

./: README.md
mocap_optitrack/config/: mocap.yaml
mocap_optitrack/src/: mocap_node.cpp
sync/: CMakeLists.txt  package.xml
sync/src/: sync_node.cpp
wearable_client/: CMakeLists.txt  package.xml
wearable_client/src/: wearable_client_node.cpp
